--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPxb5e2Y7D+Wr2hNLRxFtYI",
+      "authorship_tag": "ABX9TyPKl//uE8SB7vvsCVEMMkTt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1809,6 +1809,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import checkpoint dependencies\n",
+        "import os\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+        "\n",
+        "# Define the checkpoint path and filenames\n",
+        "os.makedirs(\"checkpoints/\",exist_ok=True)\n",
+        "checkpoint_path = \"checkpoints/weights.{epoch:02d}.hdf5\""
+      ],
+      "metadata": {
+        "id": "helJrLjrcsK-"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Compile the model\n",
         "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
       ],
@@ -1821,122 +1838,157 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create a callback that saves the model's weights every 5 epochs\n",
+        "cp_callback = ModelCheckpoint(\n",
+        "    filepath=checkpoint_path,\n",
+        "    verbose=1,\n",
+        "    save_weights_only=True,\n",
+        "    save_freq='epoch',\n",
+        "    period=5)\n",
+        "\n",
         "# Train the model\n",
-        "fit_model = nn.fit(X_train_scaled, y_train, epochs=50)"
+        "fit_model = nn.fit(X_train_scaled, y_train, epochs=50, callbacks=[cp_callback])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "fMTXsitYMAnN",
-        "outputId": "fffb5be9-626d-4460-f80c-3a7b7d3ce5b6"
+        "id": "-vPN2F0Mcz6l",
+        "outputId": "996578f0-e920-42cc-c50a-965686f546dc"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:`period` argument is deprecated. Please use `save_freq` to specify the frequency in number of batches seen.\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/50\n",
-            "804/804 [==============================] - 3s 2ms/step - loss: 0.5684 - accuracy: 0.7243\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5375 - accuracy: 0.7388\n",
             "Epoch 2/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5555 - accuracy: 0.7297\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5369 - accuracy: 0.7384\n",
             "Epoch 3/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5520 - accuracy: 0.7295\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5370 - accuracy: 0.7383\n",
             "Epoch 4/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5502 - accuracy: 0.7308\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5371 - accuracy: 0.7385\n",
             "Epoch 5/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5483 - accuracy: 0.7313\n",
+            "797/804 [============================>.] - ETA: 0s - loss: 0.5364 - accuracy: 0.7387\n",
+            "Epoch 5: saving model to checkpoints/weights.05.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5367 - accuracy: 0.7384\n",
             "Epoch 6/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5481 - accuracy: 0.7314\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5371 - accuracy: 0.7385\n",
             "Epoch 7/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5477 - accuracy: 0.7326\n",
+            "804/804 [==============================] - 3s 3ms/step - loss: 0.5366 - accuracy: 0.7391\n",
             "Epoch 8/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5463 - accuracy: 0.7312\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5368 - accuracy: 0.7389\n",
             "Epoch 9/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5463 - accuracy: 0.7317\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5368 - accuracy: 0.7391\n",
             "Epoch 10/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5458 - accuracy: 0.7329\n",
+            "791/804 [============================>.] - ETA: 0s - loss: 0.5365 - accuracy: 0.7391\n",
+            "Epoch 10: saving model to checkpoints/weights.10.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5367 - accuracy: 0.7390\n",
             "Epoch 11/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5455 - accuracy: 0.7323\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5368 - accuracy: 0.7394\n",
             "Epoch 12/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5450 - accuracy: 0.7336\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5366 - accuracy: 0.7390\n",
             "Epoch 13/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5441 - accuracy: 0.7331\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5364 - accuracy: 0.7393\n",
             "Epoch 14/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5437 - accuracy: 0.7331\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5366 - accuracy: 0.7389\n",
             "Epoch 15/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5440 - accuracy: 0.7341\n",
+            "784/804 [============================>.] - ETA: 0s - loss: 0.5368 - accuracy: 0.7398\n",
+            "Epoch 15: saving model to checkpoints/weights.15.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5364 - accuracy: 0.7395\n",
             "Epoch 16/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5434 - accuracy: 0.7350\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5366 - accuracy: 0.7391\n",
             "Epoch 17/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5436 - accuracy: 0.7345\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5361 - accuracy: 0.7388\n",
             "Epoch 18/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5431 - accuracy: 0.7334\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5364 - accuracy: 0.7393\n",
             "Epoch 19/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5430 - accuracy: 0.7348\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5361 - accuracy: 0.7385\n",
             "Epoch 20/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5426 - accuracy: 0.7352\n",
+            "788/804 [============================>.] - ETA: 0s - loss: 0.5357 - accuracy: 0.7390\n",
+            "Epoch 20: saving model to checkpoints/weights.20.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5360 - accuracy: 0.7388\n",
             "Epoch 21/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5419 - accuracy: 0.7362\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5360 - accuracy: 0.7393\n",
             "Epoch 22/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5415 - accuracy: 0.7347\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5357 - accuracy: 0.7385\n",
             "Epoch 23/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5420 - accuracy: 0.7349\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5361 - accuracy: 0.7383\n",
             "Epoch 24/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5410 - accuracy: 0.7364\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5358 - accuracy: 0.7393\n",
             "Epoch 25/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5415 - accuracy: 0.7356\n",
+            "796/804 [============================>.] - ETA: 0s - loss: 0.5357 - accuracy: 0.7382\n",
+            "Epoch 25: saving model to checkpoints/weights.25.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5357 - accuracy: 0.7382\n",
             "Epoch 26/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5411 - accuracy: 0.7360\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5358 - accuracy: 0.7393\n",
             "Epoch 27/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5414 - accuracy: 0.7356\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5357 - accuracy: 0.7402\n",
             "Epoch 28/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5412 - accuracy: 0.7361\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5359 - accuracy: 0.7394\n",
             "Epoch 29/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5406 - accuracy: 0.7375\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5355 - accuracy: 0.7387\n",
             "Epoch 30/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5406 - accuracy: 0.7355\n",
+            "786/804 [============================>.] - ETA: 0s - loss: 0.5359 - accuracy: 0.7390\n",
+            "Epoch 30: saving model to checkpoints/weights.30.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5356 - accuracy: 0.7390\n",
             "Epoch 31/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5401 - accuracy: 0.7375\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5356 - accuracy: 0.7380\n",
             "Epoch 32/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5404 - accuracy: 0.7362\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5357 - accuracy: 0.7397\n",
             "Epoch 33/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5397 - accuracy: 0.7370\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5355 - accuracy: 0.7397\n",
             "Epoch 34/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5394 - accuracy: 0.7376\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5353 - accuracy: 0.7390\n",
             "Epoch 35/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5395 - accuracy: 0.7378\n",
+            "795/804 [============================>.] - ETA: 0s - loss: 0.5350 - accuracy: 0.7396\n",
+            "Epoch 35: saving model to checkpoints/weights.35.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5354 - accuracy: 0.7392\n",
             "Epoch 36/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5395 - accuracy: 0.7372\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5356 - accuracy: 0.7391\n",
             "Epoch 37/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5395 - accuracy: 0.7365\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5352 - accuracy: 0.7399\n",
             "Epoch 38/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5391 - accuracy: 0.7376\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5351 - accuracy: 0.7398\n",
             "Epoch 39/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5389 - accuracy: 0.7382\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5352 - accuracy: 0.7402\n",
             "Epoch 40/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5390 - accuracy: 0.7374\n",
+            "782/804 [============================>.] - ETA: 0s - loss: 0.5352 - accuracy: 0.7398\n",
+            "Epoch 40: saving model to checkpoints/weights.40.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5350 - accuracy: 0.7399\n",
             "Epoch 41/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5388 - accuracy: 0.7383\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5350 - accuracy: 0.7395\n",
             "Epoch 42/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5385 - accuracy: 0.7370\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5351 - accuracy: 0.7400\n",
             "Epoch 43/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5393 - accuracy: 0.7378\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5351 - accuracy: 0.7400\n",
             "Epoch 44/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5383 - accuracy: 0.7384\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5349 - accuracy: 0.7403\n",
             "Epoch 45/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5382 - accuracy: 0.7381\n",
+            "790/804 [============================>.] - ETA: 0s - loss: 0.5353 - accuracy: 0.7396\n",
+            "Epoch 45: saving model to checkpoints/weights.45.hdf5\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5347 - accuracy: 0.7402\n",
             "Epoch 46/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5382 - accuracy: 0.7372\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5347 - accuracy: 0.7402\n",
             "Epoch 47/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5378 - accuracy: 0.7386\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5346 - accuracy: 0.7389\n",
             "Epoch 48/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5382 - accuracy: 0.7378\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5349 - accuracy: 0.7393\n",
             "Epoch 49/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5379 - accuracy: 0.7385\n",
+            "804/804 [==============================] - 2s 2ms/step - loss: 0.5345 - accuracy: 0.7394\n",
             "Epoch 50/50\n",
-            "804/804 [==============================] - 2s 2ms/step - loss: 0.5384 - accuracy: 0.7376\n"
+            "804/804 [==============================] - ETA: 0s - loss: 0.5345 - accuracy: 0.7396\n",
+            "Epoch 50: saving model to checkpoints/weights.50.hdf5\n",
+            "804/804 [==============================] - 2s 3ms/step - loss: 0.5345 - accuracy: 0.7396\n"
           ]
         }
       ]
@@ -1953,19 +2005,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "26nP75SUMAq0",
-        "outputId": "485b9cab-9d52-40a7-e4bd-a069164f3c03"
+        "outputId": "465d0e76-6701-4704-ce61-14fc6cf15210"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "268/268 - 0s - loss: 0.5542 - accuracy: 0.7306 - 466ms/epoch - 2ms/step\n",
-            "Loss: 0.5542410612106323, Accuracy: 0.7306122183799744\n"
+            "268/268 - 0s - loss: 0.5575 - accuracy: 0.7297 - 378ms/epoch - 1ms/step\n",
+            "Loss: 0.5575246214866638, Accuracy: 0.72967928647995\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Export our model to HDF5 file\n",
+        "nn_new.save(\"trained_attrition.h5\")"
+      ],
+      "metadata": {
+        "id": "EB4K-mlac9yi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
